https/06organisation-deployment-https-writable-volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organisation
  labels:
    app: organisation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organisation
  template:
    metadata:
      labels:
        app: organisation
    spec:
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: organisation
        image: samburi/organisation:1.0.3.7
        imagePullPolicy: Always
        ports:
        - containerPort: 9000
        - containerPort: 9443
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: organisation
  labels:
    app: organisation
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9000
  - name: https
    port: 443
    targetPort: 9443
  selector:
    app: organisation
  type: ClusterIP
