https/08servicegateway-deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicegateway
  labels:
    app: servicegateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicegateway
  template:
    metadata:
      labels:
        app: servicegateway
    spec:
      serviceAccountName: spring-cloud-kubernetes
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: servicegateway
        image: samburi/service-gateway:1.0.3.8
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8089
        - name: https
          containerPort: 8089
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: servicegateway
  labels:
    app: servicegateway
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8089
  - name: https
    port: 443
    targetPort: 8089
  selector:
    app: servicegateway
  type: ClusterIP
