https/banking-deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking
  labels:
    app: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking
  template:
    metadata:
      labels:
        app: banking
    spec:
      serviceAccountName: spring-cloud-kubernetes
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: banking
        image: samburi/banking:1.0.3.8
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 9013
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9013
        #     scheme: HTTPS
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: banking
  labels:
    app: banking
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9013
  - name: https
    port: 443
    targetPort: 9013
  selector:
    app: banking
  type: ClusterIP
