https/easyvalues-deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easyvalues
  labels:
    app: easyvalues
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easyvalues
  template:
    metadata:
      labels:
        app: easyvalues
    spec:
      containers:
      - name: easyvalues
        image: samburi/easyvalues:2.0.1
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
        readinessProbe:
          httpGet:
            path: /
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: nginx-config
        configMap:
          name: easyvalues-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: easyvalues
  labels:
    app: easyvalues
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: easyvalues
  type: ClusterIP
