https/expense-deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense
  labels:
    app: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense
  template:
    metadata:
      labels:
        app: expense
    spec:
      serviceAccountName: spring-cloud-kubernetes
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: expense
        image: samburi/expenses:1.0.4
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 9016
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9016
        #     scheme: HTTPS
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: expense
  labels:
    app: expense
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9016
  - name: https
    port: 443
    targetPort: 9016
  selector:
    app: expense
  type: ClusterIP
