https/loan-deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan
  labels:
    app: loan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan
  template:
    metadata:
      labels:
        app: loan
    spec:
      serviceAccountName: spring-cloud-kubernetes
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: loan
        image: samburi/loan:1.1.4
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 9015
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9015
        #     scheme: HTTPS
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: loan
  labels:
    app: loan
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9015
  - name: https
    port: 443
    targetPort: 9015
  selector:
    app: loan
  type: ClusterIP
