https/lookup-deployment-https-no-duplicate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lookup
  labels:
    app: lookup
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lookup
  template:
    metadata:
      labels:
        app: lookup
    spec:
      serviceAccountName: spring-cloud-kubernetes
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: lookup
        image: samburi/lookup:1.0.4
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 9001
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9001
        #     scheme: HTTPS
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: lookup
  labels:
    app: lookup
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9001
  - name: https
    port: 443
    targetPort: 9001
  selector:
    app: lookup
  type: ClusterIP
