https/profile-deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  labels:
    app: profile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      serviceAccountName: spring-cloud-kubernetes
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: profile
        image: samburi/profile:1.0.3.7
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 9003
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9003
        #     scheme: HTTPS
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: profile
  labels:
    app: profile
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9003
  - name: https
    port: 443
    targetPort: 9003
  selector:
    app: profile
  type: ClusterIP
