https/sales-deployment-https.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales
  labels:
    app: sales
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sales
  template:
    metadata:
      labels:
        app: sales
    spec:
      serviceAccountName: spring-cloud-kubernetes
      volumes:
      - name: tls-certs
        secret:
          secretName: letsencrypt-prod
      - name: keystore-volume
        emptyDir: {}
      containers:
      - name: sales
        image: samburi/sales:1.1.2
        imagePullPolicy: Always
        ports:
        - name: https
          containerPort: 9012
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9012
        #     scheme: HTTPS
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        #   timeoutSeconds: 5
        #   failureThreshold: 3
        volumeMounts:
        - name: tls-certs
          mountPath: /etc/tls
        - name: keystore-volume
          mountPath: /keystore
---
apiVersion: v1
kind: Service
metadata:
  name: sales
  labels:
    app: sales
spec:
  ports:
  - name: http
    port: 80
    targetPort: 9012
  - name: https
    port: 443
    targetPort: 9012
  selector:
    app: sales
  type: ClusterIP
